# star_wars_api

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/sw_world/: __init__.py  config.json  sw_world.py
tests/unit/: tests_sw_world.py
